stylesheets/stylesheet.css
/*******************************************************************************
MeyerWeb Reset
*******************************************************************************/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  vertical-align: baseline;
  font: inherit;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

ol, ul {
  list-style: none;
}

table {
  border-spacing: 0;
  border-collapse: collapse;
}

/**
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    contenteditable attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that are clearfixed.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */
.cf:before,
.cf:after {
    display: table; /* 2 */
    content: " "; /* 1 */
}

.cf:after {
    clear: both;
}

/**
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */
.cf {
    *zoom: 1;
}

/*******************************************************************************
Theme Styles
*******************************************************************************/

body {
  box-sizing: border-box;
  color: #232323;
  font-size: 100%;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  font-family: 'Open Sans', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  margin: 10px 0;
  font-weight: 700;
  font-family: 'Sintony', sans-serif;
}

h1 {
  text-align: center;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 6em;
  /*font-size: 7.4vw;*/
  margin-top: 200px;
  margin-bottom: 20px;
}

h2 {
  text-align: center;
  font-size: 2.6em;
  /*font-size: 3.2vw;*/
  color: #888888;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

h3 {
  font-size: 1.6em;
  /*font-size: 2vw;*/
  text-transform: uppercase;
}

h3.intro {
  font-style: italic;
  color: #888;
  font-family: 'Droid Serif', serif;
  font-weight: 400;
  margin: 75px auto;
  max-width: 640px;
  text-transform: none;
}

h3.intro a {
  text-decoration: underline;
}

h4 {
  font-size: 21px;
}

h5 {
  font-size: 18px;
}

h6 {
  font-size: 16px;
}

a {
  color: #888;
  text-decoration: none;
}

a:hover {
  color: #f01e49;
}

p, li {
  font-size: 1.2em;
  /*font-size: 1.2vw;*/
  margin: 10px 0 15px 0;
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

p img {
  display: inline;
  margin: 0;
  padding: 0;
  border: none;
  vertical-align: middle;
  text-align: center;
}

ul, ol, dl {
  padding: 0;
  margin: 0;
}

.header{
  height: 600px;
  background-color: #fffffa;
  box-sizing: border-box;
  padding: 20px;
  box-shadow: 0 1px 5px rgba(0,0,0,.2);
}

.header a {
  -webkit-transition: opacity .1s ease-in-out;
  -moz-transition: opacity .1s ease-in-out;
  -ms-transition: opacity .1s ease-in-out;
  -o-transition: opacity .1s ease-in-out;
  transition: opacity .1s ease-in-out;
}

.header a:hover {
  opacity: .6;
}

.github-btn {
  text-align: center;
  margin-top: 30px;
}

.github-btn iframe {
  margin: 0 auto;
}

.fork-link {
  color: #000;
  float: right;
  text-decoration: none;
}

.fork-link span{
  display: inline-block;
  vertical-align: middle;
}

.github-mark {
  width: 16px;
  height: 16px;
  background: url(../images/github-mark.png) center center no-repeat;
}

.main-nav {
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  text-align: center;
  margin: 0 auto 75px auto;
  padding: 10px 0;
  max-width: 640px;
  box-sizing: border-box;
}

.main-nav li {
  display: inline-block;
  list-style: none;
}

.main-nav a {
  font-size: 1.2em;
  /*font-size: 1.6vw;*/
  color: #232323;
  text-decoration: none;
}

.main-nav a:hover {
  color: #f01e49;
}

.main-nav li:after {
  content: '/';
  padding: 0 20px;
}

.main-nav li:last-child:after {
  content: '';
  padding-right: 0;
}

.list {
  margin-bottom: 75px;
}

.list li {
  box-sizing: border-box;
  list-style-type: circle;
  margin-left: 20px;
  vertical-align: middle;
}

.list li img, .list li span {
  display: inline-block;
  vertical-align: middle;
}

.list li img {
  width: 35px;
  border-radius: 50%;
  border: 1px solid #ddd;
}

.left-list, .left-h3 {
  margin-left: 0px;
}

.right-list, .right-h3 {
  margin-left: 225px;
}

.follows li {
  width: 47%;
  float: left;
}

/*******************************************************************************
Full-Width Styles
*******************************************************************************/

.outer {
  width: 100%;
}

.inner {
  position: relative;
  margin: 0 auto;
  max-width: 740px;
}

.footer {
  text-align: center;
  box-shadow: 0 -1px 5px rgba(0,0,0,.2);
}

.footer p{
  font-size: .8em;
  font-size: 1vw;
  display: inline-block;
}

.twitter-share {
  display: inline-block;
  vertical-align: middle;
  padding-top: 5px;
  margin-left: 20px;
}

.fb-share {
  display: inline-block;
  vertical-align: middle;
  padding-top: 5px;
  margin-left: 20px;
}


/*******************************************************************************
Small Device Styles
*******************************************************************************/

@media screen and (max-width: 480px) {

}

